EPMRPP-42218. Fix submit button text overflow.

--- a/app/src/pages/inside/dashboardItemPage/modals/common/widgetControls/controls/filtersControl/common/addEditFilter/addEditFilter.scss
+++ b/app/src/pages/inside/dashboardItemPage/modals/common/widgetControls/controls/filtersControl/common/addEditFilter/addEditFilter.scss
@@ -36,4 +36,5 @@
   margin-left: 10px;
   vertical-align: top;
   font-size: 13px;
+  white-space: nowrap;
 }
